fixed text clipping

--- a/style.css
+++ b/style.css
@@ -87,9 +87,14 @@ button {
 .categoryText {
   font-size: large;
   font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%; 
+  height: 100%; 
+  display: flex; 
+  align-items:center; 
+  justify-content: center; 
 }
 
 .hiddenAnnotation {
